--- a/app/views/pages/section_choice.html.slim
+++ b/app/views/pages/section_choice.html.slim
@@ -10,8 +10,9 @@
   .Mission.wrapper-inner
     .Mission__stage
       .Mission__statement
-        h2.Mission__headline = t '.mission.headline'
-        .Mission__text = t '.mission.text'
+        h1.Mission__headline
+          = t '.mission.headline'
+          span.Mission__text = t '.mission.text'
 
   main.content-main.content-main--wide.content-main--section_choice
     ul.section-choice.wrapper-inner
