--- a/app/assets/stylesheets/modules/_mission.scss
+++ b/app/assets/stylesheets/modules/_mission.scss
@@ -1,6 +1,3 @@
-.Mission {
-}
-
 .Mission__stage {
   width: 100%;
   height: 380px;
@@ -12,6 +9,11 @@
   [dir="rtl"] & {
     background-position: right center;
   }
+}
+
+.Mission__text {
+  margin-top: .5em;
+  display: block;
 }
 
 .Mission__statement {
@@ -65,6 +67,6 @@
   margin-bottom: .5em;
 }
 
-.Mission__statement {
+.Mission__text {
   font-size: 35px;
 }
