--- a/app/assets/stylesheets/navigation/_nav-main.scss
+++ b/app/assets/stylesheets/navigation/_nav-main.scss
@@ -31,6 +31,7 @@
 .nav-main__link {
   font-size: 20px;
   text-decoration: none;
+  color: $brand_brown;
 
   [data-section="family"] & {
     color: $brand_core_family;
@@ -40,8 +41,7 @@
     color: $brand_core_refugees;
   }
 
-  body.template--pages-section_choice[data-section="refugees"] &,
-  body.template--pages-section_choice[data-section="family"] & {
+  body.template--pages-section_choice & {
     color: $brand_brown;
   }
 }
