--- a/app/assets/stylesheets/modules/sections/_section-offer.scss
+++ b/app/assets/stylesheets/modules/sections/_section-offer.scss
@@ -115,6 +115,8 @@
 
   .page-detail__title {
     font-weight: 700;
+    font-size: 24px;
+    margin-bottom: .83em;
   }
 
   .page-detail__icons {
