--- a/app/views/pages/about.html.slim
+++ b/app/views/pages/about.html.slim
@@ -4,7 +4,7 @@
 
   main.content-main.content-main--wide.template--pages-about
     .wrapper-inner
-      h2 = t '.heading'
+      h1.page-detail__title = t '.heading'
 
       .section-team
 
