--- a/app/views/pages/impressum.html.slim
+++ b/app/views/pages/impressum.html.slim
@@ -10,7 +10,7 @@
             i.fa.fa-info-circle
           = t '.notice'
 
-      h1 = t '.heading'
+      h1.page-detail__title = t '.heading'
 
       p = t 'pages.shared.address.name'
       p = t 'pages.shared.address.street'
