--- a/app/views/pages/not_found.html.slim
+++ b/app/views/pages/not_found.html.slim
@@ -3,6 +3,6 @@
 
   main.content-main.content-main--wide
     .wrapper-inner
-      h1= t '.heading'
+      h1.page-detail__title = t '.heading'
       p== t '.description', start_page: link_to(t('.link_text'),
                                                 section_choice_path)
