--- a/app/views/pages/agb.html.slim
+++ b/app/views/pages/agb.html.slim
@@ -3,5 +3,5 @@
 
   main.content-main.content-main--wide
     .wrapper-inner
-      h1 = t '.heading'
+      h1.page-detail__title = t '.heading'
       = t '.text_html'
