Fix/1419 seo headline structure (#1432)
* Scaffold headline outline changes

* Fix section_choice

* Further changes in headline semantics

* Remove to do comment

* remove old .hamlbars files

* updated locale files

--- a/app/assets/javascripts/search/templates/search_results.hbs
+++ b/app/assets/javascripts/search/templates/search_results.hbs
@@ -1,4 +1,7 @@
 <div class='search-results-container'>
+  <h1 class='search-results-container__headline'>
+    {{headline_search_results}}
+  </h1>
   <div class='result-container'>
     <div class='result-order'>
       {{#if personal}}{{> _sort_order}}{{/if}}
