--- a/app/views/layouts/modal_create.js.erb
+++ b/app/views/layouts/modal_create.js.erb
@@ -7,6 +7,6 @@ $('body').prepend(
   "<%=
     j render 'layouts/partials/flash',
              type: 'success',
-             content: t('.success')
+             content: t("#{params[:controller]}.#{params[:action]}.success")
   %>"
 );
