--- a/public/test/css/style.css
+++ b/public/test/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700,700i,900,900i');
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:700");
 .Listing-results {
   position: relative;
