--- a/public/test/css/partials/header.css
+++ b/public/test/css/partials/header.css
@@ -28,6 +28,7 @@
 @media all and (min-width: 800px) {
 
   .header {
-    max-width: 1000px;
+    max-width: var(--max-width);
+    padding: 0;
   }
 }
