--- a/public/test/css/partials/listing-results.css
+++ b/public/test/css/partials/listing-results.css
@@ -247,7 +247,7 @@ html[dir="rtl"] .Listing-results__stamp {
 
 .Type-results__item {
   float: left;
-  padding: 5px 15px;
+  padding: 10px 18px;
   background: #D1768A;
 }
 
@@ -257,18 +257,35 @@ html[dir="rtl"] .Listing-results__stamp {
 
 .Type-results__link {
   font-weight: 700;
-  font-size: 14px;
+  font-size: 16px;
   text-decoration: none;
   color: #fff;
 }
 
 .offers__headline {
-  text-align: center;
-  color: #af1c3f;
   font-size: 24px;
-  margin-top: 1.45em;
-  margin-bottom: .5em;
+  margin-bottom: .75em;
+}
+
+.Type-results__form {
+  border: 2px solid var(--beige);
+  font-size: 14px;
+  padding: .75em 1em;
+  margin-bottom: 1.5em;
+  display: inline-block;
+}
+
+.Type-results__form label {
+  margin-right: 1.25em;
 }
 
 @media all and (min-width: 800px) {
+
+  .Type-results,
+  .Listing-results__list {
+    padding: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
 }
