--- a/public/test/css/partials/article.css
+++ b/public/test/css/partials/article.css
@@ -45,7 +45,7 @@
 }
 
 .article__headline {
-  max-width: 800px;
+  max-width: var(--max-width);
   margin: 0 auto;
   font-family: 'Roboto Slab', serif;
   font-weight: 700;
@@ -61,7 +61,7 @@
   transition: height .2s ease-in;
   font-size: inherit;
   line-height: 1.85;
-  max-width: 800px;
+  max-width: var(--max-width);
   margin: 0 auto;
 }
 
@@ -116,6 +116,6 @@
   .article {
     margin: auto;
     font-size: 16px;
-    max-width: 1000px;
+    max-width: var(--max-width);
   }
 }
