--- a/public/test/css/partials/angebote.css
+++ b/public/test/css/partials/angebote.css
@@ -5,11 +5,21 @@
   border-left: 5px solid var(--brand_brown);
 }
 
+[dir="rtl"] .angebote {
+  border-right: 5px solid var(--brand_brown);
+  border-left: none;
+}
+
 .angebote ul {
   margin-top: 0;
   list-style: none;
   padding-left: 0;
 }
+
+[dir="rtl"] .angebote ul {
+  padding-right: 0;
+}
+
 
 .angebote a {
   text-shadow: none;
