--- a/public/test/css/partials/table.css
+++ b/public/test/css/partials/table.css
@@ -1,3 +1,26 @@
+.table *,
+.table {
+  border-spacing: 0;
+  border-collapse: collapse;
+  padding: 0;
+  margin: 0;
+}
+
+.table {
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
+
 .table.full-width {
   width: 100%;
+}
+
+.table .td-with-gap {
+  padding: 0.5em 1em;
+}
+
+.table tr td {
+  border-bottom: 1px solid #ccc;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
 }
