Change contact link

--- a/app/views/layouts/partials/_header.html.slim
+++ b/app/views/layouts/partials/_header.html.slim
@@ -38,4 +38,4 @@ header.header-main
         li.nav-main__listitem
           = link_to t('.faq'), faq_path(section: current_section || 'refugees'), class: "nav-main__link"
         li.nav-main__listitem
-          = link_to t('.contact'), new_contact_path(section: current_section || 'refugees'), class: "nav-main__link"
+          = link_to t('.contact'), impressum_path(section: current_section || 'refugees'), class: "nav-main__link"
