--- a/app/assets/stylesheets/mediaqueries/_xs.scss
+++ b/app/assets/stylesheets/mediaqueries/_xs.scss
@@ -2,10 +2,10 @@
 
   @include mqindicator('XS');
 
-  .Mission__stage {
-    background-size: contain;
-    background-position: -55% center;
-  }
+  // .Mission__stage {
+  //   background-size: contain;
+  //   background-position: -55% center;
+  // }
 
   .Mission__headline {
     line-height: 24px;
