--- a/app/views/layouts/partials/_footer_minimal.html.slim
+++ b/app/views/layouts/partials/_footer_minimal.html.slim
@@ -3,7 +3,13 @@ footer.footer-main
     nav.nav-legal.footer-main__nav-legal
       ul.nav-legal__list
         li.nav-legal__listitem
-          = 'clarat gGmbH'
+          = 'Benckiser Stiftung Zukunft'
+          br
+          = 'Öffentliche Stiftung des bürgerlichen Rechts'
+          br
+          = 'www.benckiser-stiftung.org'
+        li.nav-legal__listitem
+          = 'Büro Berlin:'
           br
           = 'Französische Straße 47'
           br
@@ -12,3 +18,17 @@ footer.footer-main
           = 'Tel +49 (0)30 55 57 96 00'
           br
           = 'Fax +49 (0)30 55 57 96 09 9'
+          br
+          = 'mail@benckiser-stiftung.org'
+        li.nav-legal__listitem
+          = 'Vertretungsberechtigter Vorstand:'
+          br
+          = 'Dr. Stefan Shaw'
+        li.nav-legal__listitem
+          = 'Zuständige Aufsichtsbehörde:'
+          br
+          = 'Aufsichts- und Dienstleistungsdirektion (ADD)'
+          br
+          = 'Willy-Brandt-Platz 3'
+          br
+          = 'D-54290 Trier'
