--- a/app/assets/stylesheets/modules/_mission.scss
+++ b/app/assets/stylesheets/modules/_mission.scss
@@ -26,6 +26,15 @@
   justify-content: center;
   text-align: left;
   margin-top: 65px;
+
+  a {
+    color: $brand_brown;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
 
 .Mission__statement,
