--- a/app/assets/stylesheets/navigation/_nav-legal.scss
+++ b/app/assets/stylesheets/navigation/_nav-legal.scss
@@ -17,11 +17,14 @@
 
 .nav-legal__listitem {
   float: left;
-  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   position: relative;
   line-height: 20px;
   text-align: left;
   font-weight: 500;
+  font-size: 12px;
 
   a {
     color: $brand_brown;
@@ -31,9 +34,4 @@
       text-decoration: underline;
     }
   }
-
-  &:first-child {
-    margin-left: 0;
-  }
-
 }
