--- a/app/views/pages/section_choice.html.slim
+++ b/app/views/pages/section_choice.html.slim
@@ -17,7 +17,7 @@
           = link_to 'hier', 'http://www.benckiser-stiftung.org/de/blog/ein-neuer-hafen-fuer-clarat-family'
           = ' einen Blog Beitrag der Benckiser Stiftung zu clarat family und '
           = link_to 'hier', 'http://www.benckiser-stiftung.org/de/blog/eine-neue-heimat-fuer-clarat-refugees'
-          = ' hier einen Beitrag zu clarat refugees.'
+          = ' einen Beitrag zu clarat refugees.'
 
   main.content-main.content-main--wide.content-main--section_choice
     ul.section-choice.wrapper-inner
