adjust link on landing page

--- a/app/views/pages/section_choice.html.slim
+++ b/app/views/pages/section_choice.html.slim
@@ -30,7 +30,7 @@
           p.section-choice__centered
             = 'gehe zu'
           p.section-choice__centered
-            = link_to image_tag('logo-elternleben.svg', style: 'width:60%;height:auto;'), 'https://www.Elternleben.de'
+            = link_to image_tag('logo-elternleben.svg', style: 'width:60%;height:auto;'), 'https://www.Elternleben.de/angebote-vor-ort/'
 
       li.section-choice__item
         .section-choice__container
