switch a hover behavior and add more links to the text

--- a/app/views/pages/section_choice.html.slim
+++ b/app/views/pages/section_choice.html.slim
@@ -11,7 +11,11 @@
     .Mission__stage
       .Mission__statement
         span.Mission__text
-          = 'clarat sagt auf Wiedersehen. Wir übergeben clarat refugees and Handbook Germany und clarat family an ElternLeben.de. Wir wollten Hilfe, die es in Deutschland gibt, sichtbar machen und einfach erklären. Um diesen Auftrag kümmern sich nun unsere beiden Partner.'
+          = 'clarat sagt auf Wiedersehen. Wir übergeben clarat refugees an '
+          = link_to 'Handbook Germany', 'https://local.handbookgermany.de'
+          = ' und clarat family an '
+          = link_to 'ElternLeben.de', 'https://www.Elternleben.de/angebote-vor-ort/'
+          = '. Wir wollten Hilfe, die es in Deutschland gibt, sichtbar machen und einfach erklären. Um diesen Auftrag kümmern sich nun unsere beiden Partner.'
           p
           = 'Wenn Du mehr zu unserer Entscheidung lesen möchtest, findest Du '
           = link_to 'hier', 'http://www.benckiser-stiftung.org/de/blog/ein-neuer-hafen-fuer-clarat-family'
