minor content adjustments

--- a/app/views/pages/section_choice.html.slim
+++ b/app/views/pages/section_choice.html.slim
@@ -15,13 +15,13 @@
           = link_to 'Handbook Germany', 'https://local.handbookgermany.de'
           = ' und clarat family an '
           = link_to 'ElternLeben.de', 'https://www.Elternleben.de/angebote-vor-ort/'
-          = '. Wir wollten Hilfe, die es in Deutschland gibt, sichtbar machen und einfach erklären. Um diesen Auftrag kümmern sich nun unsere beiden Partner.'
+          = '. Hilfe, die es in Deutschland gibt, sichtbar machen und einfach erklären - um diesen Auftrag kümmern sich nun unsere beiden Partner.'
           p
-          = 'Wenn Du mehr zu unserer Entscheidung lesen möchtest, findest Du '
-          = link_to 'hier', 'http://www.benckiser-stiftung.org/de/blog/ein-neuer-hafen-fuer-clarat-family'
-          = ' einen Blog Beitrag der Benckiser Stiftung zu clarat family und '
-          = link_to 'hier', 'http://www.benckiser-stiftung.org/de/blog/eine-neue-heimat-fuer-clarat-refugees'
-          = ' einen Beitrag zu clarat refugees.'
+          = 'Mehr hierzu findest Du in den Blog Beiträgen zu '
+          = link_to 'clarat family', 'http://www.benckiser-stiftung.org/de/blog/ein-neuer-hafen-fuer-clarat-family'
+          = ' und '
+          = link_to 'clarat refugees', 'http://www.benckiser-stiftung.org/de/blog/eine-neue-heimat-fuer-clarat-refugees'
+          = '.'
 
   main.content-main.content-main--wide.content-main--section_choice
     ul.section-choice.wrapper-inner
